<resources>
    <string name="app_name">ToDo</string>
    <string name="edit_hint">Task Name</string>
    <string name="important_task">Important Task</string>
    <string name="menu_search">Search</string>
    <string name="menu_sort">Sort List</string>
    <string name="menu_sort_by_name">Sort By Name</string>
    <string name="menu_sort_by_date_created">Sort By Date</string>
    <string name="menu_hide_completed">Hide Completed</string>
    <string name="menu_delete_completed">Delete Completed</string>
    <string name="task_deleted_snack_bar">Task Deleted</string>
    <string name="task_deleted_action_text">Undo</string>
    <string name="taskDate">Created %s</string>
    <string name="TitleAddTask">Add Task</string>
    <string name="TitleNewTask">Edit Task</string>
    <string name="TitleTaskList">Tasks</string>
    <string name="error_empty_name">Name cannot be empty</string>
    <string name="message_task_updated">Task was updated</string>
    <string name="message_task_inserted">Task Saved</string>
</resources>
