<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/menu_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView"
        android:iconTint="@color/white"
        />

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_baseline_sort_24"
        android:iconTint="@color/white"
        android:title="@string/menu_sort"
        app:showAsAction="always">


        <menu>
            <item
                android:id="@+id/action_sort_by_name"
                android:title="@string/menu_sort_by_name"
                android:icon="@drawable/ic_baseline_sort_by_alpha_24"
                />

            <item
                android:id="@+id/action_sort_by_date_created"
                android:title="@string/menu_sort_by_date_created"
                android:icon="@drawable/ic_baseline_calendar_today_24"
                />


        </menu>


    </item>

    <item
        android:id="@+id/action_hide_completed_tasks"
        android:checkable="true"
        android:title="@string/menu_hide_completed"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_delete_completed_tasks"
        android:title="@string/menu_delete_completed"
        app:showAsAction="never"
        />

</menu>